objects/Supplies_Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Supplies Order Lines</relationshipLabel>
        <relationshipName>Supplies_Order_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <formula>LEFT(Case__r.Special_Instructions__c, 255)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivered_To_TheraPak__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivered To TheraPak</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_No__c</fullName>
        <label>Item #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Push_To_TheraPak__c</fullName>
        <formula>Case__r.Push_To_TheraPak__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Push To TheraPak</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <formula>CASE(Item_No__c,
&apos;378556&apos;, Case__r.Kits_Clinical_domestic__c,
&apos;546856&apos;, Case__r.Preprint_TRFs__c,
&apos;546855&apos;, Case__r.Fed_Ex_label_Site_specific_domestic__c,
&apos;546854&apos;, Case__r.Fed_Ex_label_GH_return_only_domestic__c,
&apos;378808&apos;, Case__r.Tubes_5_pack_Bio_bags__c,
&apos;378819&apos;, Case__r.Kits_Clinical_int_l__c,
&apos;546983&apos;, Case__r.Fed_Ex_label_Site_specific_int_l__c,
&apos;546982&apos;, Case__r.Fed_Ex_label_GH_return_only_int_l__c,
&apos;378381&apos;, Case__r.Kits_Research_domestic__c,
&apos;378818&apos;, Case__r.Kits_Research_int_l__c,
&apos;20623&apos;, Case__r.X1_5_Qt_Sharps_Container__c,
&apos;379025&apos;, Case__r.GH_MP_Individual_Draw_Kit__c,
&apos;379026&apos;, Case__r.GH_MP_Extra_Supplies_Kit_10__c,
&apos;548534-PrePrinted&apos;, Case__r.Preprint_Int_l_TRFs__c,
&apos;548534-Blank&apos;, Case__r.Blank_Int_l_TRFs__c,
&apos;548468&apos;, Case__r.FedEx_lbl_Site_spec_int_l_CLIENT_PAY__c,
&apos;548467&apos;, Case__r.FedEx_lbl_GENERIC_int_l_CLIENT_PAY__c,
&apos;379027&apos;, Case__r.Kit_Clinical_SWOG_domestic__c,
&apos;378819E&apos;, Case__r.CE_Kits_Clinical_EU__c,
&apos;548024E&apos;, Case__r.Fed_Ex_EU_lbl_GENERIC_CLIENT_PAY__c,
&apos;548025E&apos;, Case__r.Fed_Ex_EU_lbl_Site_spec_CLIENT_PAY__c,
&apos;548027E&apos;, Case__r.Fed_Ex_EU_lbl_GENERIC_GH_PAY__c,
&apos;548026E&apos;, Case__r.Fed_Ex_EU_lbl_Site_spec_GH_PAY__c,
&apos;379461&apos;, Case__r.Tubeless_Kits_Int_l__c,
&apos;379574&apos;, Case__r.IUO_Kit_Domestic__c, 
&apos;379575&apos;, Case__r.IUO_Kit_International__c,
&apos;379858&apos;, Case__r.LDT_Kit_no_TRF__c,
&apos;550454-PrePrinted&apos;, Case__r.RUO_Preprinted_TRF__c,
&apos;550478-PrePrinted&apos;, Case__r.LUNAR_Preprinted_TRF__c,
&apos;550007-PrePrinted&apos;, Case__r.Clinical_Trial_IUO_PrePrinted_TRF__c,
&apos;548069-PrePrinted&apos;, Case__r.Clinical_Trial_Basic_PrePrinted_TRF__c,
&apos;550007E-Preprinted&apos;, Case__r.Clinical_Trial_Site_Specific_TRF_CZ__c,
&apos;379575-GOZILA JP&apos;, Case__r.IUO_KIT_GOZILA_JAPAN__c, 
&apos;379575-VISION JP&apos;, Case__r.IUO_KIT_VISION_JAPAN__c, 
&apos;379575-SCRUM JP&apos;, Case__r.IUO_KIT_SCRUM_JAPAN__c,
&apos;550762E&apos;, Case__r.Clinical_Trial_Basic_Preprinted_TRF_EU__c,
&apos;551226-PrePrinted&apos;, Case__r.SYM_Preprinted_TRF__c,
&apos;379516E&apos;, Case__r.G360_Blood_Collection_Kit_Brazil__c,
&apos;551934-PrePrinted&apos;, Case__r.Global_Access_Pgm_PrePrinted_TRF__c,
&apos;380761&apos;, Case__r.LUNAR1_Blood_Collection_Kit_IUO_Domesti__c,
&apos;380759&apos;, Case__r.Lunar_Clinical_Kit_Domestic__c,
&apos;380760&apos;, Case__r.LUNAR_RUO_Kit_Intl_380760__c,
&apos;380802&apos;, Case__r.IUO_Kit_Int_l_AMGEN_Japan__c,
&apos;380803&apos;, Case__r.IUO_Kit_Int_l_AMGEN_Australia__c,
&apos;553224-PrePrinted&apos;, Case__r.LUNAR_Clinical_Trial_TRF__c,
&apos;380854E&apos;, Case__r.Int_l_G360_CE_IVD_Kit_SKorea_Janssen__c,
&apos;553285-Preprinted&apos;, Case__r.LUNAR_IUO_Preprinted_TRF__c,
&apos;380926&apos;, Case__r.Mobile_Phlebotomy_Individual_Draw_Kit_wi__c,
&apos;380762&apos;, Case__r.LUNAR1_Blood_Collection_Kit_IUO_Intl__c,
&apos;378819E-DRUZY&apos;, Case__r.Int_l_G360_S_Korea_IVD_Kit_DRUZY_Trial__c,
&apos;380936&apos;, Case__r.Int_l_G360_Australia_IVD_Kit_DRUZY_Trial__c,
&apos;553876-Preprinted&apos;, Case__r.G360_Clinical_Trial_Test_Requisition_For__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_No__c</fullName>
        <formula>Case__r.Request_No__c</formula>
        <label>Request No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Ship_Date__c</fullName>
        <formula>Case__r.Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seconds_Since_Push_Request__c</fullName>
        <formula>Case__r.Seconds_Since_Push_Request__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seconds Since Push Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_1__c</fullName>
        <formula>Case__r.Ship_To_Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Address 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_2__c</fullName>
        <formula>Case__r.Ship_To_Address_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Address 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <formula>Case__r.Ship_To_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Company__c</fullName>
        <formula>Case__r.Ship_To_Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact__c</fullName>
        <formula>Case__r.Ship_To_Contact__c</formula>
        <label>Ship To Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <formula>Case__r.Ship_To_Country__c</formula>
        <label>Ship To Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Phone__c</fullName>
        <formula>Case__r.Ship_To_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Postal_Code__c</fullName>
        <formula>Case__r.Ship_To_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State_Province__c</fullName>
        <formula>Case__r.Ship_To_State_Province__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <formula>LEFT(TEXT(Case__r.Shipping_Method__c), 50)</formula>
        <label>Shipping Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TheraPak_Status__c</fullName>
        <label>TheraPak Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Site_Identifier__c</fullName>
        <formula>Case__r.Account.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Site Identifier</label>
        <type>Text</type>
    </fields>
    <label>Supplies Order Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Request_No__c</columns>
        <columns>NAME</columns>
        <columns>Unique_Site_Identifier__c</columns>
        <columns>Case__c</columns>
        <columns>Item_No__c</columns>
        <columns>Qty__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SUP-{0}</displayFormat>
        <label>Supplies Order Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplies Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>